Fix overflowing display and bugs

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body{
     justify-content: center;
     margin: 0.5rem;
     text-align: center;
+    overflow: hidden;
 }
 
 #display div {
